Master thesis prefinal

--- a/Doc/KursinisDarbas.bib
+++ b/Doc/KursinisDarbas.bib
@@ -41,7 +41,7 @@
 }
 
 @misc{pflowpdf,
-  author  = {{The CMS collaboration}},
+  author  = {{CMS collaboration}},
   title   = {{Particle–Flow Event Reconstruction in CMS and Performance for Jets, Taus, and Missing Transverse Energy}},
   year    = {2009},
   howpublished  = {CMS-PAS-PFT-09-001}
@@ -75,7 +75,7 @@
 }
 
 @misc{DY13TeV,
-  author = {{The CMS Collaboration}},
+  author = {{CMS Collaboration}},
   title = {{Measurement of differential Drell-Yan cross section in proton-proton collisions at 13 TeV}},
   year = {2016},
   howpublished = {CMS-PAS-SMP-16-009}
@@ -84,7 +84,7 @@
 @misc{CMSslice,
   author = {{D.\ Barney}},
   title = {{CMS slice (July 2010 version)}},
-  howpublished = {\url{http://ippog.org/resources/2011/cms-slice-july-2010-version} [žiūr.\ 2019-04-09]}
+  howpublished = {\url{http://ippog.org/resources/2011/cms-slice-july-2010-version} [žiūr.\ 2020-05-29]}
 }
 
 @misc{LHCexperiments,
@@ -134,14 +134,14 @@
 }
 
 @misc{TightMuon,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Performance of the CMS muon detector and muon reconstruction with proton-proton collisions at $\sqrt{s} = 13\ \mathrm{TeV}$}},
   year    = {2018},
   howpublished = {CMS-MUO-16-001}
 }
 
 @misc{MediumID8,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Performance of electron reconstruction and selection with the CMS detector in proton-proton collisions at $\sqrt{s} = 8\ \mathrm{TeV}$}},
   year    = {2015},
   howpublished = {JINST 10 P06005}
@@ -166,21 +166,21 @@
 }
 
 @misc{NNPDF,
-  author  = {{The NNPDF Collaboration}},
+  author  = {{NNPDF Collaboration}},
   title   = {{Parton distributions from high-precision collider data}},
   year    = {2017},
   howpublished = {Eur.\ Phys.\ J.\ C77 no.\ 10 663}
 }  
 
 @misc{DYpic,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Measurements of differential and double-differential Drell-Yan cross sections in proton-proton collisions at $8$ TeV}},
   year    = {2014},
   howpublished = {CMS-PAS-SMP-14-003}
 }
 
 @misc{FakeRateZ,
-  author  = {{The ATLAS Collaboration}},
+  author  = {{ATLAS Collaboration}},
   title   = {{Measurement of isolated-photon pair production in $pp$ collisions at $\sqrt{s} = 7\ \mathrm{TeV}$ with the ATLAS detector}},
   year    = {2013},
   howpublished = {JHEP 1301 086}
@@ -218,7 +218,7 @@
 }
 
 @misc{PF2017,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Particle-flow reconstruction and global event description with the CMS detector}},
   year    = {2017},
   howpublished = {JINST 12 P10003}
@@ -232,21 +232,21 @@
 }
 
 @misc{HiggsEx,
-  author  = {ATLAS Collaboration},
+  author  = {{ATLAS Collaboration}},
   title   = {{Measurement of the Higgs boson mass from the $H\ensuremath{\rightarrow}\ensuremath{\gamma}\ensuremath{\gamma}$ and $H\ensuremath{\rightarrow}Z{Z}^{*}\ensuremath{\rightarrow}4\ensuremath{\ell}$ channels in $pp$ collisions at center-of-mass energies of 7 and 8 TeV with the ATLAS detector}},
   year    = {2014},
   howpublished = {Phys.\ Rev.\ D90, 052004}
 }
 
 @misc{ECALtrig,
-  author  = {P.\ K.\ Siddireddy},
+  author  = {{P.\ K.\ Siddireddy}},
   title   = {{The CMS ECAL Trigger and DAQ system: electronics auto-recovery and monitoring}},
   year    = {2018},
   howpublished = {CMS CR--2018-084}
 }
 
 @misc{CMSexperiment,
-  author  = {The CMS Collaboration},
+  author  = {{CMS Collaboration}},
   title   = {{The CMS experiment at the CERN LHC}},
   howpublished = {JINST 3 S08004},
   year    = {2008}
@@ -260,7 +260,7 @@
 }
 
 @misc{DY2018,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Measurement of the differential Drell-Yan cross section in proton-proton collisions at $\sqrt{s}=13\ \mathrm{TeV}$}},
   howpublished = {CERN-EP-2018-320},
   year    = {2018}
@@ -279,7 +279,7 @@
 }
 
 @misc{CMStrig,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{The CMS trigger system}},
   howpublished = {JINST 12 P01020},
   year    = {2017}
@@ -307,14 +307,14 @@
 }
 
 @misc{MuonID,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Performance of the CMS muon detector and muon reconstruction with proton-proton collisions at $\sqrt{s}=13\ \mathrm{TeV}$}},
   howpublished = {JINST 13 P06015},
   year    = {2018}
 }
 
 @misc{EleID,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Performance of electron reconstruction and selection with the CMS detector in proton-proton collisions at $\sqrt{s}=8\ \mathrm{TeV}$}},
   howpublished = {JINST 10 P06005},
   year    = {2015}
@@ -328,14 +328,14 @@
 }
 
 @misc{Ecorr,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Energy Calibration and Resolution of the CMS Electromagnetic Calorimeter in $pp$ Collisions at $\sqrt{s}=7\ \mathrm{TeV}$}},
   howpublished = {JINST 8 P09009},
   year    = {2013}
 }
 
 @misc{ttbarPT,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Measurement of differential cross sections for top quark pair production using the lepton+jets final state in proton-proton collisions at $13\ \mathrm{TeV}$}},
   howpublished = {Phys.\ Rev.\ D95, 092001},
   year    = {2017}
@@ -356,21 +356,21 @@
 }
 
 @misc{Higgs2018,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Observation of the Higgs boson decay to a pair of tau leptons with the CMS detector}},
   howpublished = {Phys.\ Lett.\ B779, 283},
   year    = {2018}
 }
 
 @misc{Zprime,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Search for narrow resonances in dilepton mass spectra in proton-proton collisions at $\sqrt{s}=13\ \mathrm{TeV}$ and combination with $8\ \mathrm{TeV}$ data}},
   howpublished = {Phys.\ Lett.\ B768, 57},
   year    = {2017}
 }
 
 @misc{SUSYtau,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Search for supersymmetry in events with a $\tau$ lepton pair and missing transverse momentum in proton-proton collisions at $\sqrt{s}=13\ \mathrm{TeV}$}},
   howpublished = {JHEP 11 151},
   year    = {2018}
@@ -391,14 +391,14 @@
 }
 
 @misc{DY_CMS2015,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Measurements of differential and double-differential Drell-Yan cross sections in proton-proton collisions at 8 TeV}},
   howpublished = {Eur.\ Phys.\ J.\ C75, 147},
   year    = {2015}
 }
 
 @misc{ParticleFlow,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Particle-flow reconstruction and global event description with the CMS detector}},
   howpublished = {JINST 12 P10003},
   year    = {2017}
@@ -406,28 +406,28 @@
 
 
 @misc{DY_ATLAS2017,
-  author  = {{The ATLAS Collaboration}},
+  author  = {{ATLAS Collaboration}},
   title   = {{Measurement of the Drell-Yan triple-differential cross section in $pp$ collisions at $\sqrt{s} = 8\ \mathrm{TeV}$}},
   howpublished = {JHEP 12 059},
   year    = {2017}
 }
 
 @misc{DY_ATLAS2013,
-  author  = {{The ATLAS Collaboration}},
+  author  = {{ATLAS Collaboration}},
   title   = {{Measurement of the high-mass Drell-Yan differential cross-section in $pp$ collisions at $\sqrt{s} = 7\ \mathrm{TeV}$ with the ATLAS detector}},
   howpublished = {Phys.\ Lett.\ B725, 223},
   year    = {2013}
 }
 
 @misc{DY_CMS2011,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Measurement of the Drell-Yan Cross Section in $pp$ Collisions at $\sqrt{s} = 7\ \mathrm{TeV}$}},
   howpublished = {JHEP 10 007},
   year    = {2011}
 }
 
 @misc{DY_CMS2013,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Measurement of the differential and double-differential Drell-Yan cross sections in proton-proton collisions at $\sqrt{s} = 7\ \mathrm{TeV}$}},
   howpublished = {JHEP 12 030},
   year    = {2013}
@@ -441,7 +441,7 @@
 }
 
 @misc{DY_CMS2019,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Measurement of the differential Drell-Yan cross section in proton-proton collisions at $\sqrt{s} = 13\ \mathrm{TeV}$}},
   howpublished = {JHEP 12, 059},
   year    = {2019}
@@ -504,7 +504,7 @@
 }
 
 @misc{DY2018,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Measurement of the differential Drell-Yan cross section in proton-proton collisions at $\sqrt{s}=13\ \mathrm{TeV}$}},
   howpublished = {CERN-EP-2018-320},
   year    = {2018}
@@ -516,7 +516,7 @@
 }
 
 @misc{Ecorr,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Energy Calibration and Resolution of the CMS Electromagnetic Calorimeter in $pp$ Collisions at $\sqrt{s}=7\ \mathrm{TeV}$}},
   howpublished = {JINST 8 P09009},
   year    = {2013}
@@ -570,21 +570,21 @@
 }
 
 @misc{LeptonJets,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Identification of heavy-flavour jets with the CMS detector in pp collisions at 13 TeV}},
   howpublished = {JINST 13, P05011},
   year    = {2018}
 }
 
 @misc{MAk2,
-  author  = {{Marijus Ambrozas}},
+  author  = {{M.\ Ambrozas}},
   title   = {{Drell-Yan proceso triukšmo įvykių skaičiaus įvertinimas matavimu grįstais metodais}},
   howpublished = {Teorinės fizikos ir astrofizikos magistrantūros studijų programos mokslo tiriamasis darbas. Vad.\ A.\ Juodagalvis. Vilnius: Vilniaus universitetas, Fizikos fakultetas},
   year    = {2019}
 }
 
 @misc{MAbak,
-  author  = {{Marijus Ambrozas}},
+  author  = {{M.\ Ambrozas}},
   title   = {{Drell-Yan proceso triukšmo įvykių skaičiaus įvertinimas $e\mu$ metodu}},
   howpublished = {Fizikos bakalauro studijų programos baigiamasis darbas. Vad.\ A.\ Juodagalvis. Vilnius: Vilniaus universitetas, Fizikos fakultetas},
   year    = {2018}
@@ -619,119 +619,119 @@
 }
 
 @misc{DYrapi,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Measurement of the Rapidity and Transverse Momentum Distributions of $Z$ Bosons in $pp$ Collisions at $\sqrt{s}=7$ TeV}},
   howpublished = {Phys.\ Rev.\ D 85, 032002},
   year    = {2012}
 }
 
 @misc{DYAFB_CMS2011,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Measurement of the weak mixing angle with the Drell-Yan process in proton-proton collisions at the LHC}},
   howpublished = {Phys.\ Rev.\ D 84, 112002},
   year    = {2011}
 }
 
 @misc{DYAFB_ATLAS2015,
-  author  = {{The ATLAS Collaboration}},
+  author  = {{ATLAS Collaboration}},
   title   = {{Measurement of the forward-backward asymmetry of electron and muon pair-production in $pp$ collisions at $\sqrt{s}=7$ TeV with the ATLAS detector}},
   howpublished = {JHEP 09, 049},
   year    = {2015}
 }
 
 @misc{DYAFB_LHCb2015,
-  author  = {{The LHCb Collaboration}},
+  author  = {{LHCb Collaboration}},
   title   = {{Measurement of the forward-backward asymmetry in $Z/\gamma^* \rightarrow \mu^+\mu^-$ decays and determination of the effective weak mixing angle}},
   howpublished = {JHEP 11, 190},
   year    = {2015}
 }
 
 @misc{DYAFB_CMS2018,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Measurement of the weak mixing angle using the forward-backward asymmetry of Drell-Yan events in $pp$ collisions at $8$ TeV}},
   howpublished = {Eur.\ Phys.\ J.\ C 78, 701},
   year    = {2018}
 }
 
 @misc{Z_CMS2015,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Measurement of the $Z$ boson differential cross section in transverse momentum and rapidity in proton-proton collisions at $8$ TeV}},
   howpublished = {Phys.\ Lett.\ B 749, 187},
   year    = {2015}
 }
 
 @misc{DY_ATLAS2016,
-  author  = {{The ATLAS Collaboration}},
+  author  = {{ATLAS Collaboration}},
   title   = {{Measurement of the double-differential high-mass Drell-Yan cross section in $pp$ collisions at $\sqrt{s}=8$ TeV with the ATLAS detector}},
   howpublished = {JHEP 08, 009},
   year    = {2016}
 }
 
 @misc{DY_ATLAS2014,
-  author  = {{The ATLAS Collaboration}},
+  author  = {{ATLAS Collaboration}},
   title   = {{Measurement of the low-mass Drell-Yan differential cross section at $\sqrt{s}=7$ TeV using the ATLAS detector}},
   howpublished = {JHEP 06, 112},
   year    = {2014}
 }
 
 @misc{Z_LHCb2015,
-  author  = {{The LHCb Collaboration}},
+  author  = {{LHCb Collaboration}},
   title   = {{Measurement of forward $Z\rightarrow e^+e^-$ production at $\sqrt{s}=8$ TeV}},
   howpublished = {JHEP 05, 109},
   year    = {2015}
 }
 
 @misc{Z'_CMS2011,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Search for Resonances in the Dilepton Mass Distribution in $pp$ Collisions at $\sqrt{s}=7$ TeV}},
   howpublished = {JHEP 05, 093},
   year    = {2011}
 }
 
 @misc{Z'_ATLAS2011,
-  author  = {{The ATLAS Collaboration}},
+  author  = {{ATLAS Collaboration}},
   title   = {{Inclusive search for same-sign dilepton signatures in pp collisions at $\sqrt{s}=7$ TeV with the ATLAS detector}},
   howpublished = {JHEP 10, 107},
   year    = {2011}
 }
 
 @misc{Z'_CMS2012,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Search for narrow resonances in dilepton mass spectra in $pp$ collisions at $\sqrt{s}=7$ TeV}},
   howpublished = {Phys.\ Lett.\ B 714, 158},
   year    = {2012}
 }
 
 @misc{Z'_CMS2013,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Search for heavy narrow dilepton resonances in $pp$ collisions at $\sqrt{s}=7$ TeV and $\sqrt{s}=8$ TeV}},
   howpublished = {Phys.\ Lett.\ B 720, 63},
   year    = {2013}
 }
 
 @misc{Z'_ATLAS2014,
-  author  = {{The ATLAS Collaboration}},
+  author  = {{ATLAS Collaboration}},
   title   = {{Search for high-mass dilepton resonances in $pp$ collisions at $\sqrt{s}=8$ TeV with the ATLAS detector}},
   howpublished = {Phys.\ Rev.\ D 90, 052005},
   year    = {2014}
 }
 
 @misc{Z'_CMS2015,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Search for physics beyond the standard model in dilepton mass spectra in proton-proton collisions at $\sqrt{s}=8$ TeV}},
   howpublished = {JHEP 04, 025},
   year    = {2015}
 }
 
 @misc{Z'_CMS2017,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Search for narrow resonances in dilepton mass spectra in proton-proton collisions at $\sqrt{s}=13$ TeV and combination with $8$ TeV data}},
   howpublished = {Phys.\ Lett.\ B 768, 57},
   year    = {2017}
 }
 
 @misc{Z'_CMS2018,
-  author  = {{The CMS Collaboration}},
+  author  = {{CMS Collaboration}},
   title   = {{Search for high-mass resonances in dilepton final states in proton-proton collisions at $\sqrt{s}=13$ TeV}},
   howpublished = {JHEP 06, 120},
   year    = {2018}
