--- a/Doc/OR_2021/Abstract_Ambrozas_Juodagalvis.tex
+++ b/Doc/OR_2021/Abstract_Ambrozas_Juodagalvis.tex
@@ -13,7 +13,7 @@
 \renewcommand{\figurename}{Fig.} 
 
 
-\title{FAKE LEPTON BACKGROUND STUDY FOR DRELL-YAN DIFFERENTIAL CROSS SECTION MEASUREMENT}
+\title{IMPROVED FAKE LEPTON BACKGROUND ESTIMATION FOR THE DRELL-YAN DIFFERENTIAL CROSS SECTION MEASUREMENT USING 2016 CERN CMS DATA}
 
 
 \author{\uline{Marijus Ambrozas}, Andrius Juodagalvis}
@@ -30,46 +30,46 @@ Short-lived heavy particles may be produced during such collisions, and investig
 to further push the frontier of our understanging about the Universe.
 Colliding protons can be described as two opposite flows of quarks and gluons, according to the parton model.
 Any two (or more) partons may interact during the collision, producing new particles.
-There are different probabilities of different outcomes, which depend on parton distribution functions (PDFs).
-PDFs describe probabilities of existance of specific partons inside a proton.
-PDFs must be measured with high precision in order to make correct predictions about particle interactions.
+There are different probabilities of different outcomes, which initially depend on the parton distribution functions (PDFs).
+PDFs describe probabilities of existance and energy fraction of specific partons inside a proton.
+PDFs must be measured with high precision in order to make correct predictions about proton interactions.
 
 The Drell-Yan process takes place during a proton-proton collision, when a quark and an antiquark annihilate to create
-a $Z$ boson or a virtual photon which nearly instantly decays into a lepton-antilepton pair (dilepton for short) \cite{DY}.
+a $Z$ boson or a virtual photon which nearly instantly decays into a charged lepton-antilepton pair (dilepton for short) \cite{DY}.
 Dilepton center-of-mass properties depend directly on four-momenta of the annihilating quarks.
-Therefore, precise measurements of Drell-Yan process differential cross sections are used for constraining the PDFs \cite{DY13}.
+Therefore, precise measurements of Drell-Yan process differential cross sections are used to constrain the PDFs \cite{DY13}.
 These measurements are also useful for testing the validity of higher-order corrections of the standard model as
-well as for a number of other experimental measurements where the Drell-Yan process is considered a bacground \cite{Higgs, Zprime, SUSY}.
+well as for a number of other experimental measurements where the Drell-Yan process is considered a background \cite{Higgs, Zprime, SUSY}.
 
-Leptons created during the Drell-Yan process usually have a high momentum and leave tracks that are well separated
+Charged leptons created during the Drell-Yan process usually have a high momentum and leave tracks that are well separated
 from tracks of other particles.
-This type of leptons is usually called ``prompt''.
+This type of leptons is usually called ``prompt.''
 There also are other processes that may produce prompt lepton pairs just like the Drell-Yan process.
 We refer to these processes as prompt lepton backgrounds.
-There is also, however, a possibility that a poorly isolated lepton emerging from a hadronic jet or even the jet itself
+There is also a possibility that a poorly isolated lepton emerging from a hadronic jet or even the jet itself
 will be misreconstructed as a prompt lepton.
-This type of leptons is called `fake'.
-Typical fake lepton backgrounds are $W\!+\!\mathrm{Jets}$ (one lepton is prompt and one is fake) and $QC\!D$ multijet
-(both leptons are fake).
+This type of leptons is called ``fake.''
+Typical fake lepton backgrounds are the $W\!+\!\mathrm{Jets}$ (one lepton is prompt and one is fake) and the $QC\!D$ multijet
+(both leptons are fake) processes.
 
 Fake lepton events have very large cross sections and very low probabilities to be selected as Drell-Yan event candidates.
-Therefore, simulated fake lepton background predictions are usually very inaccurate.
+Therefore, the simulated fake lepton background predictions are usually very inaccurate.
 Data-driven techniques are exploited to estimate such background yields.
-The ``fake rate'' method relies on measuring fake lepton selection efficiency (sometimes called in jargon as ``fake rate'').
-Measured efficiency is used with events containing fake leptons that have failed the selection to estimate the number of
+The ``fake rate'' method relies on measuring the fake lepton selection efficiency.
+The measured efficiency is applied on events containing fake leptons that have failed the selection to estimate the number of
 events that have passed it.
-In theory, a more sophisticated method is the so called ``matrix method'', which, in addition to fake lepton efficiency,
-includes the measurement of prompt lepton selection efficiency.
-Both methods will be presented and compared in the context of Drell-Yan differential cross section measurement using
-2016 CERN CMS data.
+In theory, a more sophisticated method is the so-called ``matrix method,'' which additionally measures the prompt lepton selection efficiency.
+Both methods will be presented and compared in the context of the Drell-Yan differential cross section measurement using
+2016 CERN CMS data recorded at $\sqrt{s}=13$ TeV.
 
-The work was financed by Vilnius University Experimental Nuclear and Particle Physics Center and done in collaboration with
-scientists from Universit\'{e} libre de Bruxelles, Seoul National University, and University of Nebraska Lincoln.
+Collaboration with CERN CMS experiment is supported by the Lithuanian Academy of Sciences.
+This work was also partially supported by a scholarship from Vilnius University Experimental Nuclear and Particle Physics Center and
+done in collaboration with scientists from Universit\'{e} libre de Bruxelles, Yonsei University, and the University of Nebraska in Lincoln.
  
 \vspace{-0.3cm}
 \begin{figure}[H]
-	\includegraphics[width=.4\linewidth]{Figure1.png}
-	\includegraphics[width=.4\linewidth]{Figure2.png}
+	\includegraphics[width=.33\linewidth]{Figure1.png}
+	\includegraphics[width=.33\linewidth]{Figure2.png}
 \vspace{-0.2cm}
 \caption{Dielectron (left) and dimuon (right) invariant mass distributions measured using 2015 CERN CMS data \cite{DY13}.
       Black dots denote event yields measured with the CMS detector.    
