--- a/Doc/OR_2021/Abstract_Ambrozas_Juodagalvis.tex
+++ b/Doc/OR_2021/Abstract_Ambrozas_Juodagalvis.tex
@@ -27,7 +27,7 @@
 The Large Hadron Collider (LHC) at CERN accelerates protons to almost the speed of light and collides them together
 with $13$ TeV collision energy.
 Short-lived heavy particles may be produced during such collisions, and investigation of these events allows physicists
-to further push the frontier of our understanging about the Universe.
+to further push the frontier of our understanding about the Universe.
 Colliding protons can be described as two opposite flows of quarks and gluons, according to the parton model.
 Any two (or more) partons may interact during the collision, producing new particles.
 There are different probabilities of different outcomes, which initially depend on the parton distribution functions (PDFs).
